--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span>Price</span>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
+           ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
             dolorum vitae. Ducimus, saepe et reiciendis dolores quod error i!
           </p>
         </div>
